test/corpus/fun.txt
=====
fun with filter
=====

fun with_filter x@tt = return 0;

---

(source_file
	(lam
		name: (identifier)
		(pattern (identifier))
		(filter (bool_literal))
		value: (application (identifier) (int_literal))))
